# biotech-ml-toolkit

./: .gitignore  README.md  pyproject.toml
examples/: 01_chemistry_predictions.ipynb  02_food_safety.ipynb
src/biotech_ml/: __init__.py  base.py  exceptions.py  registry.py  schemas.py
src/biotech_ml/chemistry/: __init__.py  allergen_detector.py  ghs_classifier.py  inci_safety_score.py  lipophilicity_predictor.py  solubility_predictor.py  toxicity_scorer.py
src/biotech_ml/features/: __init__.py  genomic.py  molecular.py  tabular.py  text.py
src/biotech_ml/food/: __init__.py  additive_risk.py  allergen_ner.py  haccp_classifier.py  ingredient_ner.py  nutriscore_predictor.py  nutritional_anomaly.py  product_lookup.py
src/biotech_ml/medical/: __init__.py  anomaly_detector.py  clinical_qa.py  ddx_suggester.py  delta_check.py  drug_lab_interaction.py  terminology_mapper.py
src/biotech_ml/microbiology/: __init__.py  ast_predictor.py  mic_regressor.py  microbiology_qa.py  organism_ner.py  phenotype_predictor.py
src/biotech_ml/training/: __init__.py  base_trainer.py
tests/: test_chemistry.py  test_food.py  test_medical.py  test_microbiology.py
